--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title></title>
-    <link rel='stylesheet' href='/css/style.css' />
-  </head>
-  <body>
-    <h1></h1>
-    <p>Welcome</p>
-  </body>
+<html lang="zh-TW">
+<head>
+  <meta charset="utf-8" />
+  <title>刮呀刮呀刮呀刮~~</title>
+  <meta name="author" content="Po-Ying Chen">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="/css/style.css" type="text/css" media="all" />
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+</head>
+<body>
+  <!-- <div id="bg">
+  		<div class="btnfr">
+  			<div class="btn1"></div>
+  			<div class="btn2"></div>
+  			<div class="btn3"></div>
+  		</div>
+  </div> -->
+<!--   <div id="bg2">
+      <div class="content"></div>
+  </div> -->
+  <!-- <div id="bg_over"></div> -->
+  <!-- <div id="bg_phone"></div> -->
+  <div id="bg_input">
+    <div class="input_fr">
+      
+    </div>
+  </div>
+  <script>
+  		var _w = window.innerWidth;
+  		var _h = window.innerHeight;
+  		$('#bg').css({'width':_w,'height':_h+100});
+      $('#bg2').css({'width':_w,'height':_h+100});
+      $('#bg_over').css({'width':_w,'height':_h+100});
+      $('#bg_phone').css({'width':_w,'height':_h+100});
+      $('#bg_input').css({'width':_w,'height':_h+100});
+      $('.content').css({'width':_w,'height':_h+100})
+
+  </script>
+</body>
 </html>
