--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,85 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+@charset 'UTF-8';
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-family:inherit;font-size:100%;vertical-align:baseline}
+body{line-height:1;color:#000;background:#fff}
+ol,ul{list-style:none}
+table{border-collapse:separate;border-spacing:0;vertical-align:middle}
+caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
+a img{border:none}
+html{overflow:hidden}
+body{background:#999}
+#mask{background:rgba(0,0,0,0.8);position:absolute;left:-100%;top:0;width:100%;height:100%;-webkit-transition:opacity 1s ease;-moz-transition:opacity 1s ease;-o-transition:opacity 1s ease;-ms-transition:opacity 1s ease;transition:opacity 1s ease;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0);}
+#mask.show{opacity:1;-ms-filter:none;filter:none;left:0}
+#mask .mask-msg{height:30px;width:100%;line-height:30px;position:absolute;top:50%;left:0;margin-top:-15px;text-align:center;color:#fff;font-size:24px}
+#bg{
+	background:url('/images/bg.jpg')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;
 }
-
-a {
-  color: #00B7FF;
+#bg2{
+	background:url('/images/bg2.png')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;	
+}
+#bg_over{
+	background:url('/images/bg_over.jpg')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;		
+}
+#bg_phone{
+	background:url('/images/bg_over.jpg')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;		
+}
+#bg_input{
+	background:url('/images/bg2.png')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;	
+}
+.input_fr{
+	background: #aaa;
+	width: 300px;
+	height:400px;
+	margin: 0 auto;	
+	margin-top:200px;
+}
+.btn1{
+	background:url('/images/button.png') 576px 288px;
+	width: 144px;
+	height: 72px;
+	float:left;
+}
+.btn2{
+	background:url('/images/button.png') 576px 288px;
+	width: 144px;
+	height: 72px;
+	float:left;
+}
+.btn3{
+	background:url('/images/button.png') 576px 288px;
+	float:left;
+	width: 144px;
+	height: 72px;
+}
+.content{
+	background:url('/images/content.png')  no-repeat center center fixed;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+  	background-size: cover;
+	margin: auto;	
 }
