--- a/views/say.ejs
+++ b/views/say.ejs
@@ -23,16 +23,17 @@
   </div> -->
   <!-- <div id="bg_over"></div> -->
   <!-- <div id="bg_phone"></div> -->
-  <div class="bg_index">
-    <div class="btn_fr indexbb_fr">
+  <div id="bg_input">
+    <div class="btn_fr">
      <!-- <input type='submit' value=" " class="btn4">
      <input type='submit' value=" " class="btn4">
      <input type='submit' value=" " class="btn4"> -->
-     <a class="btn5 s1" href="/start"></a>
-     <a class="btn5 s2" href="/say"></a>
-     <a class="btn5 s3" href="/arround"></a>
+      <a class="btn5 s1" href="/start"></a>
+      <a class="btn5 s2 active" href="/say"></a>
+      <a class="btn5 s3" href="/arround"></a>
      </div>
-
+    <div class="input_fr say_input_fr">
+    </div>
   </div>
   <script>
       if (navigator.userAgent.indexOf('iPhone')!=-1) {
