--- a/views/end.ejs
+++ b/views/end.ejs
@@ -23,16 +23,15 @@
   </div> -->
   <!-- <div id="bg_over"></div> -->
   <!-- <div id="bg_phone"></div> -->
-  <div class="bg_index">
-    <div class="btn_fr indexbb_fr">
-     <!-- <input type='submit' value=" " class="btn4">
-     <input type='submit' value=" " class="btn4">
-     <input type='submit' value=" " class="btn4"> -->
-     <a class="btn5 s1" href="/start"></a>
-     <a class="btn5 s2" href="/say"></a>
-     <a class="btn5 s3" href="/arround"></a>
+  <div id="bg_input">
+    <div class="btn_fr">
+      <a class="btn5 s1" href="/start"></a>
+      <a class="btn5 s2" href="/say"></a>
+      <a class="btn5 s3" href="/arround"></a>
      </div>
-
+    <div class="input_fr end_input_fr">
+      <p style="margin-top:35%">感謝您的參與，我們將儘速與您聯絡！</p>
+    </div>
   </div>
   <script>
       if (navigator.userAgent.indexOf('iPhone')!=-1) {
