--- a/views/end.ejs
+++ b/views/end.ejs
@@ -25,9 +25,9 @@
   <!-- <div id="bg_phone"></div> -->
   <div id="bg_input">
     <div class="btn_fr">
-      <a class="btn5 s1" href="/start"></a>
-      <a class="btn5 s2" href="/say"></a>
-      <a class="btn5 s3" href="/arround"></a>
+      <a class="btn5 s1" href="/skii/start"></a>
+      <a class="btn5 s2" href="/skii/say"></a>
+      <a class="btn5 s3" href="/skii/arround"></a>
      </div>
     <div class="input_fr end_input_fr">
       <p style="margin-top:35%">感謝您的參與，我們將儘速與您聯絡！</p>
