--- a/views/say.ejs
+++ b/views/say.ejs
@@ -28,9 +28,9 @@
      <!-- <input type='submit' value=" " class="btn4">
      <input type='submit' value=" " class="btn4">
      <input type='submit' value=" " class="btn4"> -->
-      <a class="btn5 s1" href="/skii/start"></a>
-      <a class="btn5 s2 active" href="/skii/say"></a>
-      <a class="btn5 s3" href="/skii/arround"></a>
+      <a class="btn5 s1" href="/start"></a>
+      <a class="btn5 s2 active" href="/say"></a>
+      <a class="btn5 s3" href="/arround"></a>
     </div>
     <div class="input_fr say_input_fr">
     </div>
