test resize window

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,6 +52,8 @@
           var _he = window.innerHeight;
           if(_wi >= _he){
             $('#mask_b').css('display','block');
+          }else{
+            $('#mask_b').css('display','none');
           }
       }
       mask();
