--- a/views/arround.ejs
+++ b/views/arround.ejs
@@ -11,6 +11,7 @@
   <script src="/js/geolib.min.js"></script>
 </head>
 <body>
+  <div id="mask_b"></div>
   <div id="bg_input">
     <div class="btn_fr">
      <!-- <input type='submit' value=" " class="btn4">
@@ -38,6 +39,19 @@
     </div>
   </div>
   <script>
+  $(window).resize(function() {
+        mask();
+      });
+      function mask(){
+          var _wi = window.innerWidth;
+          var _he = window.innerHeight;
+          if(_wi >= _he){
+            $('#mask_b').css('display','block');
+          }else{
+            $('#mask_b').css('display','none');
+          }
+      }
+      mask();
 var data = [<% for(var i=0; i<data.length; i++) {%>
    {name:'<%= data[i].name %>',address:'<%= data[i].city %><%= data[i].area %><%= data[i].address %>'},
 <% } %>
