--- a/views/arround.ejs
+++ b/views/arround.ejs
@@ -39,78 +39,81 @@
     </div>
   </div>
   <script>
+  var spots ={
+      '太平洋崇光百貨(BR4)':{latitude: 25.04178, longitude: 121.534296,address:'台北市大安區忠孝東路三段300號2樓',tel:'02-25525812'},
+      '京站購物中心':{latitude: 25.0493449, longitude: 121.5168249,address:'台北市大同區承德路1段1號',tel:'02-87723534'},
+      '遠東百貨(板橋中山)':{latitude: 25.0110399, longitude: 121.464423,address:'新北市板橋區中山路1段152號',tel:'02-87723534'}
+  }
+  var _length = Object.keys(spots).length
+  var _content = Object.keys(spots);
+  var _oriother = '';
+
+  for(var i=0; i<_length; i++){
+        var n = _content[i];
+        _oriother += '<li style="width:100%;height:65px;"><div style="width:60%;float:left;height:80px">'+n+'<p style="width:100%;height:30px;overflow:hidden">'+spots[n].address+'</p></div><div style="width:40%;float:left;height:80px"><a href="tel:'+spots[n].tel+'" ><img src="/images/phone.png" style="float:right"/></a></div></li><li style="width:100%;height:1px;background:#ccc;margin-bottom:10px;margin-top:10px"></li>';
+      
+  }
+  $('.othernestdiv').html(_oriother);
+
   $(window).resize(function() {
         mask();
+  });
+  function mask(){
+      var _wi = window.innerWidth;
+      var _he = window.innerHeight;
+      if(_wi >= _he){
+        $('#mask_b').css('display','block');
+      }else{
+        $('#mask_b').css('display','none');
+      }
+  }
+  mask();
+  if (navigator.userAgent.indexOf('iPhone')!=-1) {
+    $('html').css('height' ,417);
+    $('body').css('height' ,417);
+      window.addEventListener("load",function() {  
+        setTimeout(function(){
+        window.scrollTo(0, 1); }, 10);
       });
-      function mask(){
-          var _wi = window.innerWidth;
-          var _he = window.innerHeight;
-          if(_wi >= _he){
-            $('#mask_b').css('display','block');
-          }else{
-            $('#mask_b').css('display','none');
+  };
+  var id;
+  $.ajax({
+    type:'GET',
+    url:'/skii/getid',
+  }).done(function(data){
+    console.log(data);
+    id = data.id;
+    $('.id').val(id);
+  });
+  var data = [<% for(var i=0; i<data.length; i++) {%>
+     {name:'<%= data[i].name %>',address:'<%= data[i].city %><%= data[i].area %><%= data[i].address %>'},
+  <% } %>
+  ]
+  // var _da =[
+  //     {name:'太平洋崇光百貨(BR4)',address:'台北市大安區忠孝東路三段300號2樓',latitude: 25.04178, longitude: 121.534296},
+  //     {name:'京站購物中心',address:'台北市大同區承德路1段1號',latitude: 25.0493449, longitude: 121.5168249},
+  //     {name:'遠東百貨(板橋中山)',address:'新北市板橋區中山路1段152號',latitude: 25.0110399, longitude: 121.464423}
+  // ]
+  
+  if (navigator.geolocation){
+      navigator.geolocation.getCurrentPosition(
+      function(position) {
+        var _obj = geolib.findNearest(position.coords, spots, 1)
+        var _tmp = '<div style="width:60%;float:left;height:80px">'+_obj.key+'<p>'+spots[_obj.key].address+'</p></div><div style="width:40%;float:left;height:80px"><a href="tel:'+spots[_obj.key].tel+'" ><img src="/images/phone.png" style="float:right"/></a></div>';
+        $('.nearlestdiv').html(_tmp);
+        var _othertmp = '';
+        for(var i=0; i<_length; i++){
+             if(_content[i] != _obj.key){
+            var _n = _content[i];
+            _othertmp += '<li style="width:100%;height:65px;"><div style="width:60%;float:left;height:80px">'+_n+'<p style="width:100%;height:30px;overflow:hidden">'+spots[_n].address+'</p></div><div style="width:40%;float:left;height:80px"><a href="tel:'+spots[_n].tel+'" ><img src="/images/phone.png" style="float:right"/></a></div></li><li style="width:100%;height:1px;background:#ccc;margin-bottom:10px;margin-top:10px"></li>';
           }
-      }
-      mask();
-var data = [<% for(var i=0; i<data.length; i++) {%>
-   {name:'<%= data[i].name %>',address:'<%= data[i].city %><%= data[i].area %><%= data[i].address %>'},
-<% } %>
-]
-
-// var _da =[
-//     {name:'太平洋崇光百貨(BR4)',address:'台北市大安區忠孝東路三段300號2樓',latitude: 25.04178, longitude: 121.534296},
-//     {name:'京站購物中心',address:'台北市大同區承德路1段1號',latitude: 25.0493449, longitude: 121.5168249},
-//     {name:'遠東百貨(板橋中山)',address:'新北市板橋區中山路1段152號',latitude: 25.0110399, longitude: 121.464423}
-// ]
-var spots ={
-    '太平洋崇光百貨(BR4)':{latitude: 25.04178, longitude: 121.534296,address:'台北市大安區忠孝東路三段300號2樓',tel:'02-25525812'},
-    '京站購物中心':{latitude: 25.0493449, longitude: 121.5168249,address:'台北市大同區承德路1段1號',tel:'02-87723534'},
-    '遠東百貨(板橋中山)':{latitude: 25.0110399, longitude: 121.464423,address:'新北市板橋區中山路1段152號',tel:'02-87723534'}
-}
-
-
-// in this case set offset to 1 otherwise the nearest point will always be your reference point
-console.log('yoyo');
-navigator.geolocation.getCurrentPosition(
-    function(position) {
-      console.log(position.coords);
-      var _obj = geolib.findNearest(position.coords, spots, 1)
-
-      var _tmp = '<div style="width:60%;float:left;height:80px">'+_obj.key+'<p>'+spots[_obj.key].address+'</p></div><div style="width:40%;float:left;height:80px"><a href="tel:'+spots[_obj.key].tel+'" ><img src="/images/phone.png" style="float:right"/></a></div>';
-      $('.nearlestdiv').html(_tmp);
-
-      var _length = Object.keys(spots).length
-      var _content = Object.keys(spots);
-      console.log(_content);
-      var _othertmp = '';
-      for(var i=0; i<_length; i++){
-        // console.log(spots[2])
-        if(_content[i] != _obj.key){
-          var _n = _content[i];
-          _othertmp += '<li style="width:100%;height:65px;"><div style="width:60%;float:left;height:80px">'+_n+'<p style="width:100%;height:30px;overflow:hidden">'+spots[_n].address+'</p></div><div style="width:40%;float:left;height:80px"><a href="tel:'+spots[_n].tel+'" ><img src="/images/phone.png" style="float:right"/></a></div></li><li style="width:100%;height:1px;background:#ccc;margin-bottom:10px;margin-top:10px"></li>';
         }
+        $('.othernestdiv').html(_othertmp);
       }
-      $('.othernestdiv').html(_othertmp);
-    }
-  );
-// console.log('=====');
-      if (navigator.userAgent.indexOf('iPhone')!=-1) {
-        $('html').css('height' ,417);
-        $('body').css('height' ,417);
-          window.addEventListener("load",function() {  
-            setTimeout(function(){
-            window.scrollTo(0, 1); }, 10);
-          });
-      };
-      var id;
-      $.ajax({
-        type:'GET',
-        url:'/skii/getid',
-      }).done(function(data){
-        console.log(data);
-        id = data.id;
-        $('.id').val(id);
-      });
+    );
+  }else{
+       $('.nearlestdiv').html('很抱歉您的定位功能未開啟！故無法偵測');
+  }
   </script>
 </body>
 </html>
