--- a/views/start.ejs
+++ b/views/start.ejs
@@ -31,5 +31,13 @@ $(window).resize(function() {
           }
       }
       mask();
+      if (navigator.userAgent.indexOf('iPhone')!=-1) {
+        $('html').css('height' ,417);
+        $('body').css('height' ,417);
+          window.addEventListener("load",function() {  
+            setTimeout(function(){
+            window.scrollTo(0, 1); }, 10);
+          });
+      };
 </script>
 </html>
