--- a/views/start.ejs
+++ b/views/start.ejs
@@ -34,6 +34,7 @@ $(window).resize(function() {
       if (navigator.userAgent.indexOf('iPhone')!=-1) {
         $('html').css('height' ,417);
         $('body').css('height' ,417);
+        alert('123');
           window.addEventListener("load",function() {  
             setTimeout(function(){
             window.scrollTo(0, 1); }, 10);
