--- a/views/start.ejs
+++ b/views/start.ejs
@@ -18,7 +18,16 @@
   </div>
 </body>
 <script>
-
+alert('122');
+if (navigator.userAgent.indexOf('iPhone')!=-1) {
+        $('html').css({'height' :417,'background':'#000'});
+        $('body').css({'height':417,'background':'#000'});
+        alert('123');
+          window.addEventListener("load",function() {  
+            setTimeout(function(){
+            window.scrollTo(0, 1); }, 10);
+          });
+};
 $(window).resize(function() {
         mask();
       });
