--- a/views/start.ejs
+++ b/views/start.ejs
@@ -19,15 +19,18 @@
   </div>
 </body>
 <script>
+var $mask = document.querySelector('#mask');
 if (navigator.userAgent.indexOf('iPhone')!=-1) {
-        $('html').css({'height' :417});
-        $('body').css({'height':417});
-        alert('123');
-          window.addEventListener("load",function() {  
-            setTimeout(function(){
-            window.scrollTo(0, 1); }, 10);
-          });
+    $('html').css({'height' :417});
+    $('body').css({'height':417});
+    $mask.style.height = window.innerHeight;
+    // alert('123');
+      window.addEventListener("load",function() {  
+        setTimeout(function(){
+        window.scrollTo(0, 1); }, 10);
+    });
 };
+
 $(window).resize(function() {
         mask();
       });
